--- a/app/src/main/res/layout/tutorial_content_step5.xml
+++ b/app/src/main/res/layout/tutorial_content_step5.xml
@@ -7,16 +7,16 @@
     <TextView
         android:id="@+id/tutorialContentHeaderStep5"
         android:layout_width="match_parent"
-        android:layout_height="156dp"
+        android:layout_height="102dp"
         android:text="@string/tutorialContentHeaderStep5"
-        android:textColor="#000000"
+        android:textColor="@color/text_color"
         android:textSize="35sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tutorialContentBodyStep5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:text="@string/tutorialContentBodyStep5" />
+        android:layout_height="504dp"
+        android:text="@string/tutorialContentBodyStep5"
+        android:textColor="@color/text_color" />
 </LinearLayout>
