--- a/app/src/main/res/layout/nav_list_activity.xml
+++ b/app/src/main/res/layout/nav_list_activity.xml
@@ -20,7 +20,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/design_default_color_on_secondary"
 
-            app:menu="@menu/top_app_bar"
+            app:menu="@menu/top_app_bar_directory"
             app:title="@string/directory"
             app:titleTextColor="@color/white"/>
     </com.google.android.material.appbar.AppBarLayout>
