--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -25,14 +25,6 @@
       android:textStyle="bold"
       tools:ignore="RtlCompat" />
 
-  <!--<RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp">
-
-  </RelativeLayout>-->
 
   <GridLayout
       android:id="@+id/grid_layout"
@@ -256,7 +248,7 @@
         android:layout_rowWeight="1"
         android:layout_columnWeight=".5"
         android:layout_margin="12dp"
-        android:contentDescription="@string/Fitness"
+        android:contentDescription="@string/fitness"
         android:onClick="onClickCardView"
         app:cardCornerRadius="12dp"
         app:cardElevation="10dp">
@@ -266,7 +258,6 @@
           android:layout_height="match_parent"
           android:background="@color/card_background_color"
           android:gravity="center"
-          android:onClick="onClickCardView"
           android:orientation="vertical"
           android:padding="1dp">
 
@@ -274,14 +265,13 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_baseline_fitness_center_24"
-            android:visibility="visible"
-            android:contentDescription="@string/Fitness" />
+            android:contentDescription="@string/fitness" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:baselineAligned="false"
-            android:text="@string/Fitness"
+            android:text="Fitness"
             android:textColor="@color/button_text_color"
             android:textSize="15sp"
             android:textStyle="bold" />
