--- a/app/src/main/res/layout/activity_directory_information.xml
+++ b/app/src/main/res/layout/activity_directory_information.xml
@@ -24,24 +24,60 @@
 
             app:menu="@menu/top_app_bar_directory"
             app:title="More Information"
-            app:titleTextColor="@color/white"/>
+            app:titleTextColor="@color/white" />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <Button
-        android:id="@+id/phone_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="192dp"
-        android:layout_marginBottom="208dp"
-        android:backgroundTint="#FFFFFF"
-        android:clickable="true"
-        android:contentDescription=""
-        android:drawableRight="@drawable/ic_baseline_local_phone_24"
-        android:focusable="true"
-        android:src="@drawable/ic_baseline_local_phone_24"
-        android:text="Call"
-        android:textColor="@color/black"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
+
+        <TextView
+            android:id="@+id/nameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Loading information..."
+            android:textColor="@color/text_color"
+            android:textSize="36sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/descriptionTextView"
+            style="@style/directoryInfoSpacing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textColor="@color/text_color"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/testButton"
+            style="@style/directoryInfoSpacing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#F06292"
+            android:text="Test Button"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/phone_btn"
+            style="@style/directoryInfoSpacing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FFFFFF"
+            android:clickable="true"
+            android:contentDescription=""
+            android:drawableRight="@drawable/ic_baseline_local_phone_24"
+            android:focusable="true"
+            android:src="@drawable/ic_baseline_local_phone_24"
+            android:text="Call"
+            android:textColor="@color/black" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
