--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,4 +37,8 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="directoryInfoSpacing">
+        <item name="android:layout_marginTop">40dp</item>
+    </style>
 </resources>
