--- a/app/src/main/res/layout/activity_directory_information.xml
+++ b/app/src/main/res/layout/activity_directory_information.xml
@@ -61,9 +61,8 @@
             style="@style/directoryInfoSpacing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#B6B6B6"
-            android:text="Launch Navigation"
-            android:textColor="@color/black" />
+            android:backgroundTint="#FFFFFF"
+            android:text="Launch Navigation" />
 
         <Button
             android:id="@+id/phone_btn"
