--- a/app/src/main/res/layout/place_tile.xml
+++ b/app/src/main/res/layout/place_tile.xml
@@ -85,19 +85,7 @@
                     android:gravity="right|center_vertical"
                     android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/phone_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="4dp"
-                        android:layout_marginBottom="4dp"
-                        android:backgroundTint="#FFFFFF"
-                        android:clickable="true"
-                        android:contentDescription=""
-                        android:drawableRight="@drawable/ic_baseline_local_phone_24"
-                        android:focusable="true"
-                        android:src="@drawable/ic_baseline_info_24"
-                        android:text="Call" />
+
 
                     <Button
                         android:id="@+id/about_btn"
@@ -112,6 +100,7 @@
                         android:src="@drawable/ic_baseline_info_24"
                         android:text="About"
                         android:textSize="12sp"
+                        android:textColor="@color/text_color"
                         android:focusable="true" />
                 </LinearLayout>
 
