--- a/app/src/main/res/layout/place_tile.xml
+++ b/app/src/main/res/layout/place_tile.xml
@@ -85,8 +85,6 @@
                     android:gravity="right|center_vertical"
                     android:orientation="vertical">
 
-
-
                     <Button
                         android:id="@+id/about_btn"
                         android:layout_width="wrap_content"
@@ -100,7 +98,7 @@
                         android:src="@drawable/ic_baseline_info_24"
                         android:text="About"
                         android:textSize="12sp"
-                        android:textColor="@color/text_color"
+                        android:textColor="@color/button_text_color"
                         android:focusable="true" />
                 </LinearLayout>
 
@@ -114,8 +112,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:layout_weight="0.5"
-                android:text="@{place.description}"
-                android:textColor="@color/card_text_color" />
+                android:text="@{place.description}" />
 
         </LinearLayout>
 
