--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -13,7 +13,8 @@
             android:icon="@drawable/ic_color_lens"
             android:key="theme"
             android:title="@string/preference_theme_title"
-            android:textColor="?attr/colorPrimaryDark"/>
+            android:textColor="?attr/colorPrimaryDark"
+            android:summary="%s"/>
 
         <SwitchPreference
             android:key="contrast"
