--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -16,8 +16,8 @@
     </string-array>
 
     <string-array name="distance_unit_entries">
-        <item>mile</item>
-        <item>meter</item>
+        <item>Feet</item>
+        <item>Meters</item>
     </string-array>
     <string-array name="distance_unit_values">
         <item>mi</item>
