--- a/app/src/main/res/layout/destination_row.xml
+++ b/app/src/main/res/layout/destination_row.xml
@@ -10,10 +10,12 @@
         android:id="@+id/destination"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
+        android:textAlignment="center"
         android:textColor="@color/text_color"
         android:textSize="40sp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="15dp"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/distanceRemaining"
@@ -21,7 +23,8 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textColor="@color/text_color"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:layout_marginBottom="15dp" />
 
     <TextView
         android:id="@+id/upcomingInstruction"
@@ -32,4 +35,17 @@
         android:textSize="25sp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="25dp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:text="Instruction List"
+        android:textAlignment="center"
+        android:textColor="@color/text_color"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+
 </LinearLayout>
